fix: uploadbutton mobile view

--- a/client/src/pages/ProfileSettingsPage/ProfileSettingsPage.module.css
+++ b/client/src/pages/ProfileSettingsPage/ProfileSettingsPage.module.css
@@ -30,13 +30,11 @@
 }
 
 .imageUploadLabel {
-    grid-column: 1 / 3;
-    grid-row: 7 / 8;
+    grid-column: 1 / 5;
+    grid-row: 8 / 9;
     justify-self: center;
     align-self: center;
-    padding: 10px 100px;
-    margin-left: -35px;
-    margin-top: -50px;
+    padding: 10px 70px;
     color: white;
     background-color:#67392A;
     border-radius: 5px;
@@ -236,6 +234,14 @@
         font-style: italic;
         color: red;
         font-size: 14px;
+    }
+
+    .imageUploadLabel {
+        grid-column: 1 / 3;
+        grid-row: 7 / 8;
+        padding: 10px 100px;
+        margin-left: -35px;
+        margin-top: -50px;
     }
 
     .profileImage {
